# daos

./: .clang-format  .clang-format-ignore  .dockerignore  .flake8  .flake8-scons  .gitallowed  .gitcommittemplate.txt  .gitignore  .gitmodules  .pre-commit-config.yaml  .rpmignore  .tfdocs-json.yaml  .tfdocs-markdown.yaml  .tflint.hcl  .travis.yml  .yamllint  .yamllint.yaml  1  CODEOWNERS  CONTRIBUTING.md  DAOS-10885.md  DaosTestMulti.sh  Dockerfile.sles.12.3  Doxyfile  Jenkinsfile  LICENSE  Makefile  Makefile.am  NOTICE  README  README.env  README.md  SConstruct  TAG  TODO.txt  VERSION  Vagrantfile  ]  autogen.sh  bang  (+72 more)
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
NewDocs/: DAOS Docker.md
build_info/: __init__.py  base.py
ci/: .gitignore  bandit.config  builds.json  bullseye_generate_report.sh  bullseye_generate_report_node.sh  check_d_macro_calls.py  code_coverage_report.sh  codespell.excludes  codespell.ignores  commit_pragma_mapping.yaml  common.sh  copy_doxygen_files.sh  coverity_success.sh  coverity_unsuccessful.sh  d_check.c  d_check_post.c  daily_status.py  daos-doxygen-matcher.json  daos-flake-matcher.json  daos-flakee-matcher.json  daos-flakew-matcher.json  daos-gcc-matcher.json  doc_only_change.sh  docker_nlt.sh  durations.json  durations_builds.json  functional_test_summary.sh  functions.sh  gen_commit_pragmas.py  get_commit_message.py  get_commit_pragmas.sh  get_commmit_pragmas.sh  gha_functions.sh  gha_helper.py  gha_provision_cluster.sh  jenkins_artifacts.py  (+47 more)
dsr/tests/: Makefile.am  SConscript  other.c  pseudo_cluster.c  single.sh
(+8819 files in other folders)
